--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "node-record-lpcm16": "^1.0.1",
     "openai": "^4.85.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
